--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -16,7 +16,8 @@
     <div class="row mt-5">
         <div class="col-6 mx-auto">
             <h1>User Details</h1>
-            <div class="mt-2">Username: <span sec:authentication="principal.username"/></div>
+            <h1>hello users</h1>
+<!--            <div class="mt-2">Username: <span sec:authentication="principal.username"/></div>-->
             <div class="mt-2"> Roles: <span sec:authentication="principal.authorities"/></div>
             <div class="mt-5"><a class="link-primary" th:href="@{/logout}">Logout</a></div>
         </div>
